--- a/css/styles.css
+++ b/css/styles.css
@@ -436,7 +436,7 @@ section {
 }
 
 .footer-social {
-
+    margin-right: 80px;
 }
 
 .footer-social .footer-descr {
@@ -450,4 +450,255 @@ section {
 .footer-social .social-link:hover,
 .footer-social .social-link:focus {
     background-color: #31D0AA;
+}
+
+.subscribe .footer-descr {
+    margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+}
+
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: transparent;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    margin-right: 24px;
+    padding: 8px 16px;
+    color: #FFF;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.48px;
+}
+
+.footer-input::placeholder {
+    color: #FFF;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.48px;
+}
+
+.footer-input:focus {
+    outline: none;
+}
+
+.footer-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 24px;
+    border-radius: 4px;
+    background: #4D5AE5;
+    border: none;
+    cursor: pointer;
+
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+    background: #404BBF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.footer-btn .footer-descr {
+    line-height: 1.5;
+    letter-spacing: 0.64px;
+    margin: 0;
+}
+
+.subscribe-icon {
+    fill: #fff;
+    margin-left: 16px;
+}
+
+
+/* MODAL */
+
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.40);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    position: absolute;
+    width: 408px;
+    height: 584px;
+    top: 50%;
+    left: 50%;
+    border-radius: 4px;
+    background-color: #FCFCFC;
+    transform: translate(-50%, -50%);
+    padding: 72px 24px 24px;
+}
+
+.modal-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 7px;
+    background-color: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-icon {
+    display: block;
+    width: 8px;
+    height: 8px;
+    fill: #2E2F42;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: #404BBF;
+}
+
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon {
+    background-color: transparent;
+    fill: #ffffff;
+}
+
+.modal-title {
+    color: #2E2F42;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 16px;
+}
+
+.modal-field {
+    position: relative;
+    display: block;
+}
+
+.modal-label {
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.48px;
+    color: #8E8F99;
+    
+}
+
+.modal-input {
+    display: block;
+    background-color: inherit;
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    padding: 11px 12px 11px 38px;
+
+    resize: none;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field:not(:last-child) .modal-input {
+    margin-bottom: 8px;
+}
+
+.modal-icon {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field:nth-child(4n) .modal-input {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+}
+
+.modal-input::placeholder {
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.48px;
+    color: rgba(46, 47, 66, 0.40);
+}
+
+.modal-input:focus {
+    border-color: #4D5AE5;
+    outline: none;
+}
+  
+.modal-input:focus + .modal-icon {
+    fill: #4D5AE5;
+}
+
+.check-text {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: 1.167;
+    letter-spacing: 0.48px;
+    color: #8E8F99;
+}
+
+.check-text a {
+    line-height: 1.33;
+    text-decoration-line: underline;
+    color: #4D5AE5;
+}
+
+.checkbox-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    border-radius: 4px;
+    margin-right: 8px;
+    fill: transparent;
+
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check-input:checked + .check-text .checkbox-icon {
+    fill: #FFF;
+    background-color: #404BBF;
+    border-color: transparent;
+
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.modal .hero-button {
+    margin-top: 24px;
 }
