--- a/css/styles.css
+++ b/css/styles.css
@@ -601,16 +601,10 @@ section {
 .modal-field {
     position: relative;
     display: block;
-}
-
-.modal-label {
-    display: block;
-    margin-bottom: 4px;
     font-size: 12px;
     line-height: 1.167;
     letter-spacing: 0.48px;
     color: #8E8F99;
-    
 }
 
 .modal-input {
@@ -618,6 +612,7 @@ section {
     background-color: inherit;
     width: 100%;
     height: 40px;
+    margin-top: 4px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding: 11px 12px 11px 38px;
