--- a/css/styles.css
+++ b/css/styles.css
@@ -537,7 +537,7 @@ section {
     visibility: hidden;
     pointer-events: none;
 
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -556,27 +556,33 @@ section {
 .modal {
     position: absolute;
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     top: 50%;
     left: 50%;
     border-radius: 4px;
     background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transform: translate(-50%, -50%);
     padding: 72px 24px 24px;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn {
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: 24px;
     right: 24px;
     width: 24px;
     height: 24px;
-    padding: 7px;
+    padding: 0;
     background-color: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.10);
     border-radius: 50%;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn-icon {
@@ -584,12 +590,13 @@ section {
     width: 8px;
     height: 8px;
     fill: #2E2F42;
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
     background-color: #404BBF;
+    border: none;
 }
 
 .modal-btn:hover .modal-btn-icon,
@@ -620,6 +627,7 @@ section {
     width: 100%;
     height: 40px;
     margin-top: 4px;
+    margin-bottom: 8px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding: 11px 12px 11px 38px;
@@ -629,9 +637,9 @@ section {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-field:not(:last-child) .modal-input {
+/* .modal-field:not(:last-child) .modal-input {
     margin-bottom: 8px;
-}
+} */
 
 .modal-icon {
     position: absolute;
