--- a/css/styles.css
+++ b/css/styles.css
@@ -621,12 +621,21 @@ section {
     color: #8E8F99;
 }
 
+.modal-label {
+    display: block;
+    line-height: 1.17;
+    margin-bottom: 4px;
+}
+
+.modal-input-wrap {
+    position: relative;
+}
+
 .modal-input {
     display: block;
     background-color: inherit;
     width: 100%;
     height: 40px;
-    margin-top: 4px;
     margin-bottom: 8px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
