--- a/css/styles.css
+++ b/css/styles.css
@@ -638,8 +638,12 @@ section {
     height: 40px;
     margin-bottom: 8px;
     border-radius: 4px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     border: 1px solid rgba(46, 47, 66, 0.40);
     padding: 11px 12px 11px 38px;
+    outline: transparent;
 
     resize: none;
 
@@ -648,22 +652,26 @@ section {
 
 .modal-icon {
     position: absolute;
-    bottom: 8px;
     left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-field:nth-child(4n) {
+    margin-bottom: 16px;
 }
 
 .modal-field:nth-child(4n) .modal-input {
     width: 100%;
     height: 120px;
     padding: 8px 16px;
-    margin-bottom: 16px;
 }
 
 .modal-input::placeholder {
     font-size: 12px;
-    line-height: 1.167;
+    line-height: 1.17;
     letter-spacing: 0.48px;
     color: rgba(46, 47, 66, 0.40);
 }
@@ -677,11 +685,21 @@ section {
     fill: #4D5AE5;
 }
 
+.modal-check {
+    position: relative;
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    color: #8E8F99;
+    margin-bottom: 24px;
+}
+
 .check-text {
     display: flex;
     align-items: center;
     font-size: 12px;
-    line-height: 1.167;
+    line-height: 1.17;
     letter-spacing: 0.48px;
     color: #8E8F99;
 }
@@ -693,23 +711,23 @@ section {
 }
 
 .checkbox-icon {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.40);
-    border-radius: 4px;
+    border-radius: 2px;
     margin-right: 8px;
     fill: transparent;
 
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-input:checked + .check-text .checkbox-icon {
-    fill: #FFF;
+    fill: #F4F4FD;
     background-color: #404BBF;
-    border-color: transparent;
+    border: none;
 
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
