--- a/css/styles.css
+++ b/css/styles.css
@@ -690,7 +690,7 @@ section {
 }
 
 .check-text {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     font-size: 12px;
     line-height: 1.17;
