--- a/css/styles.css
+++ b/css/styles.css
@@ -530,13 +530,10 @@ section {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.40);
     top: 0;
     left: 0;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-
+    background-color: rgba(46, 47, 66, 0.40);
+    
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -556,7 +553,7 @@ section {
     border-radius: 4px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     padding: 72px 24px 24px;
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -680,8 +677,7 @@ section {
 }
 
 .modal-check {
-    position: relative;
-    display: block;
+    /* position: relative; */
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.48px;
@@ -690,8 +686,6 @@ section {
 }
 
 .check-text {
-    display: inline-flex;
-    align-items: center;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.48px;
@@ -699,6 +693,7 @@ section {
 }
 
 .check-text a {
+    display: inline-block;
     line-height: 1.33;
     text-decoration-line: underline;
     color: #4D5AE5;
