--- a/css/styles.css
+++ b/css/styles.css
@@ -529,20 +529,19 @@ section {
 .backdrop {
     position: fixed;
     width: 100%;
-    height: 100%;
-    top: 0;
     left: 0;
-    background-color: rgba(46, 47, 66, 0.40);
-    
+    top: 0;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-open {
+/* .backdrop.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
 
 .modal {
     position: absolute;
