--- a/css/styles.css
+++ b/css/styles.css
@@ -436,7 +436,7 @@ section {
 }
 
 .footer-social {
-    margin-right: 80px;
+    margin-right: auto;
 }
 
 .footer-social .footer-descr {
@@ -468,7 +468,6 @@ section {
     background-color: transparent;
     border: 1px solid #FFFfff;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    margin-right: 24px;
     padding: 8px 16px;
     color: #FFFfff;
     font-size: 12px;
@@ -533,15 +532,25 @@ section {
     top: 0;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
-/* .backdrop.is-open {
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.backdrop.is-open {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 .modal {
     position: absolute;
@@ -609,7 +618,6 @@ section {
     line-height: 1.17;
     letter-spacing: 0.48px;
     color: #8E8F99;
-    margin-bottom: 8px;
 }
 
 .modal-label {
@@ -619,6 +627,7 @@ section {
 
 .modal-input-wrap {
     position: relative;
+    margin-bottom: 8px;
 }
 
 .modal-input {
@@ -626,7 +635,6 @@ section {
     background-color: inherit;
     width: 100%;
     height: 40px;
-    margin-bottom: 8px;
     border-radius: 4px;
     line-height: 1.17;
     letter-spacing: 0.04em;
